unpackaged/main/default/objects/Opportunity/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>The Owner data from Account to send in the Credit Request</description>
    <inlineHelpText>The Owner data from Account to send in the Credit Request</inlineHelpText>
    <label>Account Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Owner</fullName>
                <default>true</default>
                <label>First Owner</label>
            </value>
            <value>
                <fullName>Second Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>