unpackaged/main/default/objects/Opportunity/fields/ACH_Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>ACH_Program_Fee__c</fullName>
    <label>ACH Program Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>