unpackaged/main/default/objects/Opportunity/fields/ACH_Program_Fee_and_Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>ACH_Program_Fee_and_Origination_Fee__c</fullName>
    <description>This field combines the ACH Program Fee and The Origination Fee for the Contract Generation app</description>
    <formula>ACH_Program_Fee__c  +  Origination_Fee_Lender__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACH Program Fee and Origination Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>