unpackaged/main/default/objects/Opportunity/fields/Act_1_Avg_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Act_1_Avg_Daily_Balance__c</fullName>
    <formula>IF(Number_of_Account_1__c &lt;&gt; 0, Act_1_Total_Daily_Balance__c  /  Number_of_Account_1__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. 1 Avg. Daily Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>