unpackaged/main/default/objects/Opportunity/fields/Act_1_Avg_Days_Negative__c.field-meta.xml
<CustomField>
    <fullName>Act_1_Avg_Days_Negative__c</fullName>
    <formula>IF(Act_1_Total_Days_Negative__c &lt;&gt; 0, Act_1_Total_Days_Negative__c  /  Number_of_Account_1__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. 1 Avg. Days Negative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>