unpackaged/main/default/objects/Opportunity/fields/Act_1_Total_Days_Negative__c.field-meta.xml
<CustomField>
    <fullName>Act_1_Total_Days_Negative__c</fullName>
    <label>Act. 1 Total Days Negative</label>
    <summarizedField>Bank_Stataments__c.Number_of_Days_Negative__c</summarizedField>
    <summaryFilterItems>
        <field>Bank_Stataments__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 1</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Stataments__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>