unpackaged/main/default/objects/Opportunity/fields/Act_2_Annual_Revenue_Trend__c.field-meta.xml
<CustomField>
    <fullName>Act_2_Annual_Revenue_Trend__c</fullName>
    <formula>Act_2_Avg_Monthly_Deposit__c  * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. 2 Annual Revenue Trend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>