unpackaged/main/default/objects/Opportunity/fields/Act_2_Avg_Days_Negative__c.field-meta.xml
<CustomField>
    <fullName>Act_2_Avg_Days_Negative__c</fullName>
    <formula>IF(Act_2_Total_Days_Negative__c &lt;&gt; 0, Act_2_Total_Days_Negative__c  /  Act_2_No_of_Months__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. 2 Avg. Days Negative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>