unpackaged/main/default/objects/Opportunity/fields/Act_2_No_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Act_2_No_of_Months__c</fullName>
    <label>Act. 2 No. of Months</label>
    <summaryFilterItems>
        <field>Bank_Stataments__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 2</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Stataments__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>