unpackaged/main/default/objects/Opportunity/fields/Act_2_Total_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Act_2_Total_Deposits__c</fullName>
    <label>Act. 2 Total Deposits</label>
    <summarizedField>Bank_Stataments__c.Deposits__c</summarizedField>
    <summaryFilterItems>
        <field>Bank_Stataments__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 2</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Stataments__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>