unpackaged/main/default/objects/Opportunity/fields/Act_3_Avg_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Act_3_Avg_Daily_Balance__c</fullName>
    <formula>IF( Act_3_No_of_Months__c  &lt;&gt; 0,    Act_3_Total_Daily_Balance__c    / Act_3_No_of_Months__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. 3 Avg. Daily Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>