unpackaged/main/default/objects/Opportunity/fields/Act_3_Avg_No_of_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Act_3_Avg_No_of_Deposits__c</fullName>
    <formula>IF( Act_3_No_of_Months__c  &lt;&gt; 0,  Act_3_Total_No_of_Deposits__c  / Act_3_No_of_Months__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Act. 3 Avg. No. of Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>