unpackaged/main/default/objects/Opportunity/fields/Act_3_Total_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Act_3_Total_Daily_Balance__c</fullName>
    <label>Act. 3 Total Daily Balance</label>
    <summarizedField>Bank_Stataments__c.Average_Daily_Balance__c</summarizedField>
    <summaryFilterItems>
        <field>Bank_Stataments__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 3</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Stataments__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>