unpackaged/main/default/objects/Opportunity/fields/Additional_Fees_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fees_1__c</fullName>
    <label>Additional Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>