unpackaged/main/default/objects/Opportunity/fields/Additional_Guarantor_s_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Guarantor_s_Line_1__c</fullName>
    <description>To populate in the Revenue Purchase Agreement</description>
    <label>Additional Guarantor(s) Line 1</label>
    <type>TextArea</type>
</CustomField>