unpackaged/main/default/objects/Opportunity/fields/Additional_Guarantor_s_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Guarantor_s_Line_2__c</fullName>
    <description>To insert on the Revenue Purchase Agreement</description>
    <label>Additional Guarantor(s) Line 2</label>
    <type>TextArea</type>
</CustomField>