unpackaged/main/default/objects/Opportunity/fields/Age_Owner_1__c.field-meta.xml
<CustomField>
    <fullName>Age_Owner_1__c</fullName>
    <formula>IF( MONTH(TODAY())&gt;MONTH(Account.Date_of_Birth_1__c), YEAR(TODAY())-YEAR(Account.Date_of_Birth_1__c), IF(AND(MONTH(TODAY()) = MONTH(Account.Date_of_Birth_1__c), DAY(TODAY()) &gt;= DAY(Account.Date_of_Birth_1__c)), YEAR(TODAY())-YEAR(Account.Date_of_Birth_1__c), (YEAR(TODAY())-YEAR(Account.Date_of_Birth_1__c))-1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Owner 1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>