unpackaged/main/default/objects/Opportunity/fields/Aiden_s_Team__c.field-meta.xml
<CustomField>
    <fullName>Aiden_s_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This deal does or does not belong to Aiden's team.</description>
    <inlineHelpText>This deal does or does not belong to Aiden's team.</inlineHelpText>
    <label>Aiden's Team</label>
    <type>Checkbox</type>
</CustomField>