unpackaged/main/default/objects/Opportunity/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <formula>Account.Alternate_Phone_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Phone</label>
    <type>Text</type>
</CustomField>