unpackaged/main/default/objects/Opportunity/fields/Amex_SE_Number__c.field-meta.xml
<CustomField>
    <fullName>Amex_SE_Number__c</fullName>
    <label>Amex SE Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>