unpackaged/main/default/objects/Opportunity/fields/Annual_Interest_Rate_COJ__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate_COJ__c</fullName>
    <label>Annual Interest Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>