unpackaged/main/default/objects/Opportunity/fields/Annual_Revenue_Trend__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Trend__c</fullName>
    <formula>Act_1_Annual_Revenue_Trend__c +  Act_2_Annual_Revenue_Trend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Revenue Trend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>