unpackaged/main/default/objects/Opportunity/fields/App_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>App_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App Notification Sent</label>
    <type>Checkbox</type>
</CustomField>