unpackaged/main/default/objects/Opportunity/fields/Applicant_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Birthdate__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner',  Account.Date_of_Birth_2__c , Account.Date_of_Birth_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Birthdate</label>
    <type>Date</type>
</CustomField>