unpackaged/main/default/objects/Opportunity/fields/Applicant_City__c.field-meta.xml
<CustomField>
    <fullName>Applicant_City__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner',  Account.City_State_Zip_Code_2__c , Account.City_State_Zip_Code_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant City</label>
    <type>Text</type>
</CustomField>