unpackaged/main/default/objects/Opportunity/fields/Applicant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_First_Name__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner',  Account.Full_Name_2__c, Account.Full_Name_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant First Name</label>
    <type>Text</type>
</CustomField>