unpackaged/main/default/objects/Opportunity/fields/Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>Applicant_ID__c</fullName>
    <label>Applicant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>