unpackaged/main/default/objects/Opportunity/fields/Applicant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Last_Name__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner',  Account.Last_Name_2__c , Account.Last_Name_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Last Name</label>
    <type>Text</type>
</CustomField>