unpackaged/main/default/objects/Opportunity/fields/Applicant_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Middle_Name__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner',  Account.Partner_2_Middle_Name__c, Account.Partner_1_Middle_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Middle Name</label>
    <type>Text</type>
</CustomField>