unpackaged/main/default/objects/Opportunity/fields/Applicant_SSN__c.field-meta.xml
<CustomField>
    <fullName>Applicant_SSN__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner',  Account.SSN_2__c , Account.SSN_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant SSN</label>
    <type>Text</type>
</CustomField>