unpackaged/main/default/objects/Opportunity/fields/Applicant_State__c.field-meta.xml
<CustomField>
    <fullName>Applicant_State__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner',  Account.State_2__c , Account.State_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant State</label>
    <type>Text</type>
</CustomField>