unpackaged/main/default/objects/Opportunity/fields/Applicant_Street__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Street__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner', Account.Residence_Address_2__c, Account.Residence_Address_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Street</label>
    <type>Text</type>
</CustomField>