unpackaged/main/default/objects/Opportunity/fields/Applicant_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Applicant_ZIP__c</fullName>
    <formula>if(Text(Account_Owner__c) == 'Second Owner',  Account.Zip_2__c , Account.Zip_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant ZIP</label>
    <type>Text</type>
</CustomField>