unpackaged/main/default/objects/Opportunity/fields/Application_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_In_Date_Time__c</fullName>
    <label>Application In Date/Time</label>
    <type>DateTime</type>
</CustomField>