unpackaged/main/default/objects/Opportunity/fields/Application_Missing_Info_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Missing_Info_Date_Time__c</fullName>
    <label>Application Missing Info Date/Time</label>
    <type>DateTime</type>
</CustomField>