unpackaged/main/default/objects/Opportunity/fields/Approval_Numbers_1__c.field-meta.xml
<CustomField>
    <fullName>Approval_Numbers_1__c</fullName>
    <label>Approval Numbers</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>