unpackaged/main/default/objects/Opportunity/fields/Approval_Numbers_2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Numbers_2__c</fullName>
    <label>Approval Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>