unpackaged/main/default/objects/Opportunity/fields/Approval_Numbers_Cont__c.field-meta.xml
<CustomField>
    <fullName>Approval_Numbers_Cont__c</fullName>
    <label>Approval Numbers Cont.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>