unpackaged/main/default/objects/Opportunity/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <description>Sub Stage for Approvals</description>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved - Considering</fullName>
            </value>
            <value>
                <fullName>Approved - Pending Stack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>