unpackaged/main/default/objects/Opportunity/fields/Approval_Stips__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stips__c</fullName>
    <label>Approval Stips</label>
    <type>TextArea</type>
</CustomField>