unpackaged/main/default/objects/Opportunity/fields/Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Time__c</fullName>
    <label>Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>