unpackaged/main/default/objects/Opportunity/fields/Approved_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Approved_Ratio__c</fullName>
    <formula>IF(X1st_Sales_Rep__r.Id == Owner.Id &amp;&amp; ISPICKVAL(StageName , "Approved"), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>