unpackaged/main/default/objects/Opportunity/fields/Articles_of_Inc__c.field-meta.xml
<CustomField>
    <fullName>Articles_of_Inc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Articles of Inc</label>
    <type>Checkbox</type>
</CustomField>