unpackaged/main/default/objects/Opportunity/fields/Assigned_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Merchant_ID__c</fullName>
    <label>Assigned Merchant ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>