unpackaged/main/default/objects/Opportunity/fields/Balance1__c.field-meta.xml
<CustomField>
    <fullName>Balance1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Opportunities (Funder)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>