unpackaged/main/default/objects/Opportunity/fields/Balance2__c.field-meta.xml
<CustomField>
    <fullName>Balance2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Opportunities (Funder)</relationshipLabel>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>