unpackaged/main/default/objects/Opportunity/fields/Balance_Owed__c.field-meta.xml
<CustomField>
    <fullName>Balance_Owed__c</fullName>
    <formula>Account.Balance_Owed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>