unpackaged/main/default/objects/Opportunity/fields/Balance_Sheet_Profit_Loss_YTD__c.field-meta.xml
<CustomField>
    <fullName>Balance_Sheet_Profit_Loss_YTD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Sheet/Profit Loss YTD</label>
    <type>Checkbox</type>
</CustomField>