unpackaged/main/default/objects/Opportunity/fields/Bank_Statement_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement_Comments__c</fullName>
    <label>Bank Statement Comments</label>
    <type>TextArea</type>
</CustomField>