unpackaged/main/default/objects/Opportunity/fields/Best_time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_time_to_Call__c</fullName>
    <description>Best time to contact with merchant.</description>
    <formula>Account.Best_time_to_Call__c</formula>
    <inlineHelpText>Best time to contact with merchant.</inlineHelpText>
    <label>Best time to Call</label>
    <type>Text</type>
</CustomField>