unpackaged/main/default/objects/Opportunity/fields/Business_Debt_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Business_Debt_Schedule__c</fullName>
    <description>Business Debt Schedule</description>
    <inlineHelpText>Business Debt Schedule Complete/Incomplete</inlineHelpText>
    <label>Business Debt Schedule</label>
    <type>TextArea</type>
</CustomField>