unpackaged/main/default/objects/Opportunity/fields/Bypass_Duplicate_Detection__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Duplicate_Detection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Duplicate Detection</label>
    <type>Checkbox</type>
</CustomField>