unpackaged/main/default/objects/Opportunity/fields/Call_Center_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is mapped to the Call Center Agent Name on the Lead record and gets populated once the lead is converted</description>
    <label>Call Center Agent Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Call Center Agent Name)</relationshipLabel>
    <relationshipName>Opportunities_Agent</relationshipName>
    <type>Lookup</type>
</CustomField>