unpackaged/main/default/objects/Opportunity/fields/Cashio_Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>Cashio_Submission_Id__c</fullName>
    <externalId>true</externalId>
    <label>Cashio Submission Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>