unpackaged/main/default/objects/Opportunity/fields/CC_Act_1_Avg_Monthly_Sales__c.field-meta.xml
<CustomField>
    <fullName>CC_Act_1_Avg_Monthly_Sales__c</fullName>
    <formula>IF( CC_Act_1_No_of_Months__c  &lt;&gt; 0,  CC_Act_1_Total_Sales__c  / CC_Act_1_No_of_Months__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Act. 1 Avg. Monthly Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>