unpackaged/main/default/objects/Opportunity/fields/CC_Act_1_No_of_Months__c.field-meta.xml
<CustomField>
    <fullName>CC_Act_1_No_of_Months__c</fullName>
    <label>CC Act. 1 No. of Months</label>
    <summaryFilterItems>
        <field>Merchant_Sales__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 1</value>
    </summaryFilterItems>
    <summaryForeignKey>Merchant_Sales__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>