unpackaged/main/default/objects/Opportunity/fields/CC_Act_1_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>CC_Act_1_Total_Sales__c</fullName>
    <label>CC Act. 1 Total Sales</label>
    <summarizedField>Merchant_Sales__c.Total_CC_Sales__c</summarizedField>
    <summaryFilterItems>
        <field>Merchant_Sales__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 1</value>
    </summaryFilterItems>
    <summaryForeignKey>Merchant_Sales__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>