unpackaged/main/default/objects/Opportunity/fields/CC_Batches__c.field-meta.xml
<CustomField>
    <fullName>CC_Batches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Batches</label>
    <type>Checkbox</type>
</CustomField>