unpackaged/main/default/objects/Opportunity/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <formula>Account.Cell_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cell Phone</label>
    <type>Text</type>
</CustomField>